# conda-playground

./: .gitignore  CMakeLists.txt  README.md  developer-osx.yml  pyproject.toml  setup.py
conda/: conda_build_config.yaml  osx_arm64.yaml
conda/recipe/: bld.bat  build.sh  meta.yaml  run_test.py
recipes/: conda_build_config.yaml
recipes/framework/: meta.yaml
recipes/qtgui/: build.sh  meta.yaml
src/: CMakeLists.txt  setup.py
src/playground/: CMakeLists.txt  __init__.py  _playground.cpp
